DataGrid - Fix the expand button vertical alignment (T677928) (#5876)

--- a/styles/widgets/generic/gridBase.generic.less
+++ b/styles/widgets/generic/gridBase.generic.less
@@ -410,6 +410,10 @@
             .dx-command-expand {
                 width: @GENERIC_GRID_BASE_COMMAND_EXPAND_COLUMN_WIDTH;
                 min-width: @GENERIC_GRID_BASE_COMMAND_EXPAND_COLUMN_WIDTH;
+
+                &.dx-@{widgetName}-group-space {
+                    padding-top: @GENERIC_GRID_BASE_CELL_PADDING
+                }
             }
         }
 
